# hpp-python

./: .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  DEADJOE  README.md  flake.nix  graph.dot  out.txt  package.xml  suit  tmp_graph.dot
.github/workflows/: nix.yml  update-flake-lock.yml
build-rel/: CMakeCache.txt  CMakeDoxygenDefaults.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  constraintgraph.dot  hpp-python.pc  install_manifest.txt  tmp.dot
build-rel/Testing/Temporary/: CTestCostData.txt
build-rel/cmake/: cmake_reinstall.cmake.configured  cmake_uninstall.cmake
build-rel/cmake/Release/: cmake_reinstall.cmake
build-rel/doc/: Doxyfile  hpp-python.doxytag
build-rel/doc/doxygen-html/: annotated.html  annotated_dup.js  by-substitution_8cc.js  by-substitution_8cc__incl.md5  classes.html  classpyhpp_1_1core_1_1PathWrapper.html  classpyhpp_1_1core_1_1PathWrapper.js  classpyhpp_1_1core_1_1PathWrapper__coll__graph.map  classpyhpp_1_1core_1_1PathWrapper__inherit__graph.md5  classpyhpp_1_1core_1_1pathOptimization_1_1SGBWrapper-members.html  classpyhpp_1_1core_1_1pathOptimization_1_1SGBWrapper.html  classpyhpp_1_1core_1_1pathOptimization_1_1SGBWrapper__coll__graph.md5  classpyhpp_1_1core_1_1pathOptimization_1_1SGBWrapper__inherit__graph.map  classpyhpp_1_1core_1_1pathOptimization_1_1SGBWrapper__inherit__graph.md5  classpyhpp_1_1cpp__like__vector__indexing__suite-members.html  classpyhpp_1_1cpp__like__vector__indexing__suite.html  classpyhpp_1_1cpp__like__vector__indexing__suite__coll__graph.md5  config-validation_8cc.html  config-validation_8cc.js  config-validation_8cc__incl.map  config-validation_8cc__incl.md5  configuration-shooter_8cc.js  configuration-shooter_8cc__incl.map  configuration-shooter_8cc__incl.md5  connected-component_8cc.html  connected-component_8cc.js  connected-component_8cc__incl.map  connected-component_8cc__incl.md5  constraint_8cc.js  constraint_8cc__incl.md5  constraints_2bindings_8cc.html  constraints_2bindings_8cc.js  constraints_2bindings_8cc__incl.md5  constraints_2fwd_8hh.html  constraints_2fwd_8hh.js  constraints_2fwd_8hh__dep__incl.md5  constraints_2fwd_8hh__incl.md5  constraints_2fwd_8hh_source.html  corbaserver_2bindings_8cc.html  corbaserver_2bindings_8cc.js  (+580 more)
build-rel/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-rel/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: configure.py  doxygen_xml_parser.py
include/pyhpp/: ref.hh  stl-pair.hh  util.hh  vector-indexing-suite.hh  vector_indexing_suite.hh
include/pyhpp/constraints/: fwd.hh
include/pyhpp/corbaserver/: fwd.hh
include/pyhpp/core/: fwd.hh  path-planner.hh  problem.hh  steering-method.hh
include/pyhpp/coverage/: fwd.hh
include/pyhpp/manipulation/: fwd.hh
include/pyhpp/pinocchio/: fwd.hh
src/: CMakeLists.txt
src/pyhpp/: __init__.py  bindings.cc
src/pyhpp/constraints/: bindings.cc  by-substitution.cc  differentiable-function.cc  explicit-constraint-set.cc  explicit-solver.cc  explicit.cc  generic-transformation.cc  hybrid-solver.cc  implicit.cc  iterative-solver.cc  locked-joint.cc  relative-com.cc
src/pyhpp/corbaserver/: bindings.cc  server.cc
src/pyhpp/corbaserver/wholebodyStep/: bindings.cc  server.cc
src/pyhpp/core/: __init__.py  bindings.cc  config-validation.cc  configuration-shooter.cc  connected-component.cc  constraint.cc  distance.cc  equation.cc  node.cc  parameter.cc  path-optimizer.cc  path-planner.cc  path-projector.cc  path-validation.cc  path.cc  problem-solver.cc  problem-target.cc  problem.cc  reports.cc  roadmap.cc  static_stability_constraint_factory.py  steering-method.cc
src/pyhpp/core/path/: bindings.cc  spline.cc  vector.cc
src/pyhpp/core/path-optimization/: bindings.cc  spline-gradient-based-abstract.cc
src/pyhpp/core/pathOptimization/: bindings.cc  spline-gradient-based-abstract.cc
src/pyhpp/core/path_optimization/: bindings.cc  spline-gradient-based-abstract.cc
src/pyhpp/core/problem_target/: bindings.cc  goal-configurations.cc
src/pyhpp/coverage/: bindings.cc  path.cc
src/pyhpp/manipulation/: bindings.cc  constraint_graph_factory.py  device.cc  device.hh  graph.cc  graph.hh  path-optimizer.cc  path-planner.cc  path-planner.hh  path-projector.cc  problem.cc  problem.hh  security_margins.py  steering-method.cc  steering-method.hh
src/pyhpp/manipulation/steering_method/: bindings.cc  cartesian.cc
src/pyhpp/manipulation/urdf/: bindings.cc  util.cc
src/pyhpp/pinocchio/: bindings.cc  device.cc  device.hh  liegroup.cc
src/pyhpp/pinocchio/urdf/: __init__.py  bindings.cc  util.cc
tests/: CMakeLists.txt  constraint_graph.py  construction_set.py  corbaserver-client.py  corbaserver.py  differentiable-function.py  graph_factory.py  graph_factory2.py  imports.py  liegroup.py  load_ur3.py  motion_planner.py  non_linear_spline_gradient_based.py  out.txt  path-optimizer.py  path-planner.py  path.py  problem-solver.py  rrt.py  solver.py  test_benchmark.py  test_non_linear_optimization.py  test_non_linear_optimization_with_wholebody_step.py  tmp_test.py
tests/benchmarks/: baxter-manipulation-boxes-spf.py  baxter-manipulation-boxes.py  construction-set-m-rrt.py  pr2-in-iai-kitchen.py  pr2-manipulation-kitchen-spf.py  pr2-manipulation-kitchen.py  pr2-manipulation-two-hand-spf.py  pr2-manipulation-two-hand.py  pyrene-on-the-ground.py  romeo-placard-spf.py  romeo-placard.py  test_benchmarks.py  ur3-spheres-spf.py  ur3-spheres.py
tests/integration/: benchmark_utils.py  construction-set-m-rrt.py  pr2-in-iai-kitchen.py  romeo-placard.py  test_benchmarks.py  ur3-spheres-spf.py  ur3-spheres.py
tests/unit/: __init__.py  conftest.py  test_configuration_shooter.py  test_constraint_factory.py  test_constraint_graph_factory.py  test_device.py  test_differentiable_function.py  test_handles_grippers.py  test_liegroup.py  test_path.py  test_path_optimizer.py  test_path_planner.py  test_path_projector.py  test_path_validation.py  test_position_constraint.py  test_problem.py  test_roadmap.py  test_security_margins.py  test_static_stability.py  test_steering_method.py
(+118 files in other folders)
